--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -86,6 +86,7 @@ jobs:
   sonar-backend:
     name: Sonar Analysis Backend
     runs-on: ubuntu-latest
+    needs: test-backend
     
     steps:
       - name: Checkout code
