config: Update data source properties to use URLs

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,8 +4,8 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-data.products.path=${DATA_PRODUCTS_PATH}
-data.stores.path=${DATA_STORES_PATH}
-data.warehouses.path=${DATA_WAREHOUSES_PATH}
+data.products.url=${DATA_PRODUCTS_URL:https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/products.json}
+data.stores.url=${DATA_STORES_URL:https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/stores.json}
+data.warehouses.url=${DATA_WAREHOUSES_URL:https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/warehouses.json}
 
 scheduler.distribution.cron=3 * * * * *
