--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -5,8 +5,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-data.products.path=/Users/raul/Dev/product-distribution/data/products.json
-data.stores.path=/Users/raul/Dev/product-distribution/data/stores.json
-data.warehouses.path=/Users/raul/Dev/product-distribution/data/warehouses.json
+data.products.url=https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/products.json
+data.stores.url=https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/stores.json
+data.warehouses.url=https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/warehouses.json
 
 scheduler.distribution.cron=3 * * * * *
