--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -4,8 +4,8 @@ spring.datasource.password=${DATABASE_PASSWORD:product_distribution}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-data.products.path=${DATA_PRODUCTS_PATH:/app/data/products.json}
-data.stores.path=${DATA_STORES_PATH:/app/data/stores.json}
-data.warehouses.path=${DATA_WAREHOUSES_PATH:/app/data/warehouses.json}
+data.products.url=${DATA_PRODUCTS_URL:https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/products.json}
+data.stores.url=${DATA_STORES_URL:https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/stores.json}
+data.warehouses.url=${DATA_WAREHOUSES_URL:https://raw.githubusercontent.com/raulHerediaHorcajo/product-distribution/main/data/warehouses.json}
 
 scheduler.distribution.cron=0 0 2 * * *
